package ru.chat.server.core;

public interface ChatServerListener {
   void onChatServerMessage(String msg);
}
